--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,12 +1,14 @@
-<div class="row" *ngFor="let session of sessions">
+<div class="row" *ngFor="let session of visibleSessions">
   <div class="col-md-10">
     <collapsible-well>
-      <div well-title>{{ session.name }}</div>
-      <i
-        *ngIf="session.voters.length > 3"
-        class="glyphicon glyphicon-fire"
-        style="color: red"
-      ></i>
+      <div well-title>
+        {{ session.name }}
+        <i
+          *ngIf="session.voters.length > 3"
+          class="glyphicon glyphicon-fire"
+          style="color: rgb(255, 72, 72); margin-left: 5px"
+        ></i>
+      </div>
       <div well-body>
         <h6>{{ session.presenter }}</h6>
         <span>Duration: {{ session.duration | duration }}</span
