--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -1,56 +1,70 @@
 <div class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" >ngEvents</a>
-      </div>
-  
-      <div class="collapse navbar-collapse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">ngEvents</a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li>
+          <a
+            [routerLink]="['/events']"
+            [routerLinkActiveOptions]="{ exact: true }"
+            routerLinkActive="active"
+            >All Events</a
+          >
+        </li>
+        <li>
+          <a
+            [routerLink]="['/events/new']"
+            [routerLinkActiveOptions]="{ exact: true }"
+            routerLinkActive="active"
+            >Create Event</a
+          >
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Events
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="">Angular Connect</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a 
-            [routerLink]="['/events']"
-            [routerLinkActiveOptions]="{exact: true}" 
-            routerLinkActive="active"
-            >All Events</a>
-          </li>
-          <li>
-            <a 
-            [routerLink]="['/events/new']" 
-            [routerLinkActiveOptions]="{exact: true}" 
-            routerLinkActive="active"
-            >Create Event</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
-              Events
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li >
-                <a href="">Angular Connect</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <div class="navbar-header navbar-right">
-          <ul class="nav navbar-nav">
-            <li>
-              <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']">Login</a>
-              <a
+            <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']"
+              >Login</a
+            >
+            <a
               *ngIf="auth.isAuthenticated()"
               [routerLink]="['user/profile']"
               routerLinkActive="active"
-              >Welcome {{auth.currentUser.firstName}}</a>
-            </li>
-          </ul>
-        </div>
-        <form id="searchForm"  class="navbar-form navbar-right"  >
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search Sessions" >
-          </div>
-          <button class="btn btn-default" >
-            Search
-          </button>
-        </form>
+              >Welcome {{ auth.currentUser.firstName }}</a
+            >
+          </li>
+        </ul>
       </div>
+      <form
+        id="searchForm"
+        (ngSubmit)="searchSessions(searchTerm)"
+        class="navbar-form navbar-right"
+      >
+        <div class="form-group">
+          <input
+            [(ngModel)]="searchTerm"
+            name="searchTerm"
+            type="text"
+            class="form-control"
+            placeholder="Search Sessions"
+          />
+        </div>
+        <button class="btn btn-default">Search</button>
+      </form>
     </div>
   </div>
+</div>
