--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -63,8 +63,18 @@
             placeholder="Search Sessions"
           />
         </div>
-        <button class="btn btn-default">Search</button>
+        <button class="btn btn-default" modal-trigger>Search</button>
       </form>
     </div>
   </div>
 </div>
+<simple-modal title="Matching sessions">
+  <div class="list-group">
+    <a
+      class="list-group-item"
+      *ngFor="let session of foundSessions"
+      [routerLink]="['/events', session.id]"
+      >{{ session.name }}</a
+    >
+  </div>
+</simple-modal>
