--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -63,17 +63,23 @@
             placeholder="Search Sessions"
           />
         </div>
-        <button class="btn btn-default" modal-trigger>Search</button>
+        <button class="btn btn-default" modal-trigger="searchResults">
+          Search
+        </button>
       </form>
     </div>
   </div>
 </div>
-<simple-modal title="Matching sessions">
+<simple-modal
+  closeOnBodyClick="true"
+  elementId="searchResults"
+  title="Matching sessions"
+>
   <div class="list-group">
     <a
       class="list-group-item"
       *ngFor="let session of foundSessions"
-      [routerLink]="['/events', session.id]"
+      [routerLink]="['/events', session.eventId]"
       >{{ session.name }}</a
     >
   </div>
