--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -112,9 +112,12 @@
         placeholder="event price..."
       />
     </div>
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" #locationGroup="ngModelGroup" validateLocation>
       <div class="form-group">
         <label for="address">Event Location:</label>
+        <em *ngIf="locationGroup?.invalid && locationGroup?.touched"
+          >You must enter either a full location or an online url</em
+        >
         <input
           (ngModel)="(newEvent.location?.address)"
           name="address"
@@ -152,6 +155,9 @@
       <label for="onlineUrl">Online Url:</label>
       <input
         (ngModel)="(newEvent.onlineUrl)"
+        (change)="
+          (locationGroup.control.controls.address.updateValueAndValidity)
+        "
         name="onlineUrl"
         id="onlineUrl"
         type="text"
@@ -201,13 +207,14 @@
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
     <button
-      type="button"
+      type="submit"
       [disabled]="newEventForm.invalid"
-      class="btn btn-default"
-      (click)="cancel()"
+      class="btn btn-primary"
     >
+      Save
+    </button>
+    <button type="button" class="btn btn-default" (click)="cancel()">
       Cancel
     </button>
   </form>
